--- a/core/mainwindow.ui
+++ b/core/mainwindow.ui
@@ -307,9 +307,7 @@
           <string>Lire</string>
          </property>
          <property name="icon">
-          <iconset theme="media-playback-start">
-           <normaloff/>
-          </iconset>
+          <iconset theme="media-playback-start"/>
          </property>
          <property name="shortcut">
           <string>Ctrl+Space</string>
@@ -322,9 +320,7 @@
           <string>Pause</string>
          </property>
          <property name="icon">
-          <iconset theme="media-playback-pause">
-           <normaloff/>
-          </iconset>
+          <iconset theme="media-playback-pause"/>
          </property>
          <property name="shortcut">
           <string>Ctrl+Space</string>
@@ -412,9 +408,7 @@
   </widget>
   <action name="actionOpen">
    <property name="icon">
-    <iconset theme="document-open">
-     <normaloff/>
-    </iconset>
+    <iconset theme="document-open"/>
    </property>
    <property name="text">
     <string>Ouvrir</string>
@@ -425,9 +419,7 @@
   </action>
   <action name="actionNew">
    <property name="icon">
-    <iconset theme="document-new">
-     <normaloff/>
-    </iconset>
+    <iconset theme="document-new"/>
    </property>
    <property name="text">
     <string>Nouveau</string>
@@ -438,9 +430,7 @@
   </action>
   <action name="actionSave">
    <property name="icon">
-    <iconset theme="document-save">
-     <normaloff/>
-    </iconset>
+    <iconset theme="document-save"/>
    </property>
    <property name="text">
     <string>Enregistrer</string>
@@ -451,9 +441,7 @@
   </action>
   <action name="actionQuit">
    <property name="icon">
-    <iconset theme="window-close">
-     <normaloff/>
-    </iconset>
+    <iconset theme="window-close"/>
    </property>
    <property name="text">
     <string>Quitter</string>
@@ -484,9 +472,7 @@
   </action>
   <action name="actionAddSlide">
    <property name="icon">
-    <iconset theme="window-new">
-     <normaloff/>
-    </iconset>
+    <iconset theme="window-new"/>
    </property>
    <property name="text">
     <string>Ajouter une diapositive</string>
@@ -511,9 +497,7 @@
   </action>
   <action name="actionSaveAs">
    <property name="icon">
-    <iconset theme="document-save-as">
-     <normaloff/>
-    </iconset>
+    <iconset theme="document-save-as"/>
    </property>
    <property name="text">
     <string>Enregistrer sous...</string>
@@ -557,9 +541,7 @@
   </action>
   <action name="actionAbout">
    <property name="icon">
-    <iconset theme="help-about">
-     <normaloff/>
-    </iconset>
+    <iconset theme="help-about"/>
    </property>
    <property name="text">
     <string>À &amp;propos</string>
@@ -587,9 +569,7 @@
   </action>
   <action name="actionRenameSlide">
    <property name="icon">
-    <iconset theme="document-properties">
-     <normaloff/>
-    </iconset>
+    <iconset theme="document-properties"/>
    </property>
    <property name="text">
     <string>Renommer la diapositive</string>
@@ -600,9 +580,7 @@
   </action>
   <action name="actionDeleteSlide">
    <property name="icon">
-    <iconset theme="edit-delete">
-     <normaloff/>
-    </iconset>
+    <iconset theme="edit-delete"/>
    </property>
    <property name="text">
     <string>Supprimer la diapositive</string>
@@ -613,9 +591,7 @@
   </action>
   <action name="actionRepaint">
    <property name="icon">
-    <iconset theme="view-refresh">
-     <normaloff/>
-    </iconset>
+    <iconset theme="view-refresh"/>
    </property>
    <property name="text">
     <string>Refaire le rendu</string>
@@ -629,9 +605,7 @@
   </action>
   <action name="actionStart">
    <property name="icon">
-    <iconset theme="view-fullscreen">
-     <normaloff/>
-    </iconset>
+    <iconset theme="view-fullscreen"/>
    </property>
    <property name="text">
     <string>Démarrer la présentation</string>
@@ -639,9 +613,7 @@
   </action>
   <action name="actionDuplicateSlide">
    <property name="icon">
-    <iconset theme="edit-copy">
-     <normaloff/>
-    </iconset>
+    <iconset theme="edit-copy"/>
    </property>
    <property name="text">
     <string>Dupliquer la diapositive</string>
@@ -652,9 +624,7 @@
   </action>
   <action name="actionMoveSlideLeft">
    <property name="icon">
-    <iconset theme="arrow-left">
-     <normaloff/>
-    </iconset>
+    <iconset theme="arrow-left"/>
    </property>
    <property name="text">
     <string>Déplacer vers la gauche</string>
@@ -668,9 +638,7 @@
   </action>
   <action name="actionMoveSlideRight">
    <property name="icon">
-    <iconset theme="arrow-right">
-     <normaloff/>
-    </iconset>
+    <iconset theme="arrow-right"/>
    </property>
    <property name="text">
     <string>Déplacer vers la droite</string>
@@ -684,9 +652,7 @@
   </action>
   <action name="actionPrint">
    <property name="icon">
-    <iconset theme="document-print">
-     <normaloff/>
-    </iconset>
+    <iconset theme="document-print"/>
    </property>
    <property name="text">
     <string>Imprimer</string>
@@ -726,9 +692,7 @@
   </action>
   <action name="actionDeleteElements">
    <property name="icon">
-    <iconset theme="edit-delete">
-     <normaloff/>
-    </iconset>
+    <iconset theme="edit-delete"/>
    </property>
    <property name="text">
     <string>Supprimer</string>
@@ -739,9 +703,7 @@
   </action>
   <action name="actionDuplicateElements">
    <property name="icon">
-    <iconset theme="edit-copy">
-     <normaloff/>
-    </iconset>
+    <iconset theme="edit-copy"/>
    </property>
    <property name="text">
     <string>Dupliquer</string>
@@ -752,9 +714,7 @@
   </action>
   <action name="actionRaiseElement">
    <property name="icon">
-    <iconset theme="object-order-raise">
-     <normaloff/>
-    </iconset>
+    <iconset theme="object-order-raise"/>
    </property>
    <property name="text">
     <string>Avancer vers l'avant-plan</string>
@@ -765,9 +725,7 @@
   </action>
   <action name="actionLowerElement">
    <property name="icon">
-    <iconset theme="object-order-lower">
-     <normaloff/>
-    </iconset>
+    <iconset theme="object-order-lower"/>
    </property>
    <property name="text">
     <string>Reculer vers l'arrière-plan</string>
@@ -778,9 +736,7 @@
   </action>
   <action name="actionBringElementToFront">
    <property name="icon">
-    <iconset theme="object-order-front">
-     <normaloff/>
-    </iconset>
+    <iconset theme="object-order-front"/>
    </property>
    <property name="text">
     <string>Envoyer au premier plan</string>
@@ -791,9 +747,7 @@
   </action>
   <action name="actionBringElementToBack">
    <property name="icon">
-    <iconset theme="object-order-back">
-     <normaloff/>
-    </iconset>
+    <iconset theme="object-order-back"/>
    </property>
    <property name="text">
     <string>Envoyer à l'arrière plan</string>
@@ -1133,7 +1087,7 @@
    <sender>actionRepaint</sender>
    <signal>triggered()</signal>
    <receiver>MainWindow</receiver>
-   <slot>reRenderSlide()</slot>
+   <slot>refreshSlide()</slot>
    <hints>
     <hint type="sourcelabel">
      <x>-1</x>
@@ -1634,7 +1588,7 @@
   <slot>openSlideshow()</slot>
   <slot>about()</slot>
   <slot>renameSlide()</slot>
-  <slot>reRenderSlide()</slot>
+  <slot>refreshSlide()</slot>
   <slot>deleteSlide()</slot>
   <slot>copySlide()</slot>
   <slot>managePlugins()</slot>
