--- a/core/resizedialog.ui
+++ b/core/resizedialog.ui
@@ -1,36 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>GeometryDialog</class>
- <widget class="QDialog" name="GeometryDialog">
+ <class>ResizeDialog</class>
+ <widget class="QDialog" name="ResizeDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>288</width>
-    <height>97</height>
+    <width>327</width>
+    <height>109</height>
    </rect>
-  </property>
-  <property name="maximumSize">
-   <size>
-    <width>288</width>
-    <height>97</height>
-   </size>
   </property>
   <property name="windowTitle">
    <string>Dimensions du diaporama</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QRadioButton" name="automatic">
-     <property name="text">
-      <string>Automatique, utiliser la taille de l'écran</string>
-     </property>
-    </widget>
+    <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <item>
+      <widget class="QRadioButton" name="automaticSize">
+       <property name="text">
+        <string>Utiliser la taille de l'écran :</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QComboBox" name="screenList"/>
+     </item>
+    </layout>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QRadioButton" name="custom">
+      <widget class="QRadioButton" name="customSize">
        <property name="text">
         <string>Personalisé :</string>
        </property>
@@ -106,7 +107,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>accepted()</signal>
-   <receiver>GeometryDialog</receiver>
+   <receiver>ResizeDialog</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -122,7 +123,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>rejected()</signal>
-   <receiver>GeometryDialog</receiver>
+   <receiver>ResizeDialog</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -138,7 +139,7 @@
   <connection>
    <sender>width</sender>
    <signal>valueChanged(int)</signal>
-   <receiver>GeometryDialog</receiver>
+   <receiver>ResizeDialog</receiver>
    <slot>widthChanged(int)</slot>
    <hints>
     <hint type="sourcelabel">
@@ -154,7 +155,7 @@
   <connection>
    <sender>height</sender>
    <signal>valueChanged(int)</signal>
-   <receiver>GeometryDialog</receiver>
+   <receiver>ResizeDialog</receiver>
    <slot>heightChanged(int)</slot>
    <hints>
     <hint type="sourcelabel">
@@ -170,7 +171,7 @@
   <connection>
    <sender>lockRatio</sender>
    <signal>toggled(bool)</signal>
-   <receiver>GeometryDialog</receiver>
+   <receiver>ResizeDialog</receiver>
    <slot>lockRatioToggled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
@@ -183,10 +184,27 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>screenList</sender>
+   <signal>currentIndexChanged(int)</signal>
+   <receiver>ResizeDialog</receiver>
+   <slot>selectedScreenChanged(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>264</x>
+     <y>21</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>163</x>
+     <y>54</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>widthChanged(int)</slot>
   <slot>heightChanged(int)</slot>
   <slot>lockRatioToggled(bool)</slot>
+  <slot>selectedScreenChanged(int)</slot>
  </slots>
 </ui>
